--- a/public/src/sass/header.scss
+++ b/public/src/sass/header.scss
@@ -27,7 +27,7 @@
   padding: 15px;
   cursor: pointer;
   float: left;
-  color: #212121;
+  color: #B9B4B4;
   border-right: 1px solid $theme-light-color;
   transition: all 0.2s ease-out 0s;
 
