--- a/public/src/sass/order_manage.scss
+++ b/public/src/sass/order_manage.scss
@@ -21,6 +21,9 @@
     min-width: 120px;
     white-space: noraml;
   }
+  .order-status {
+    width: 58px;
+  }
 
   .remark-in-table {
     min-width: 120px;
