--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,7 +10,7 @@
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link href="/plugins/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="/css/style.min.css?rev=c2dd393f21e5a27cc0f4c6351c08c15c">
+  <link rel="stylesheet" href="/css/style.min.css?rev=27a3d0f4bb7e76b614603ce40d140046">
   <script type="text/javascript">
     window.xfxb = {
       login: {{isLogin}},
@@ -32,9 +32,9 @@
   </div>
   <section id="app"></section>
   <script src="/lib/vendor/jquery-1.11.3.min.js"></script>
-  <script src="/js/app.min.js?rev=c213a54561afa3e1cbf685efdd0f6644"></script>
+  <script src="http://localhost:3000/app.js"></script>
   <script type="text/javascript">$(function(){$('#loader').remove();})</script>
-  
+  <script src="http://localhost:3000/webpack-dev-server.js"></script>
   <!-- <script src="/js/main.min.js?rev=74a2b33f68a000e4799f522640dc3654"></script> -->
   <script src="/lib/bootstrap.min.js"></script>
   <script src="/lib/bootstrap-datepicker.min.js"></script>
