--- a/public/src/sass/_variables.sass
+++ b/public/src/sass/_variables.sass
@@ -18,7 +18,8 @@ $theme-black: #4A4947
 $theme-colour-bg: #dac7a7 //文字着重背景色
 
 $pagination-color: #D0C59E
-$btn-color: #BD9E64
+$btn-color: #9E6A28
+// $btn-color: #BD9E64
 
 // $login-color: #C38D6D
 $login-color: #D27F2E
