--- a/views/index.hbs
+++ b/views/index.hbs
@@ -32,9 +32,9 @@
   </div>
   <section id="app"></section>
   <script src="/lib/vendor/jquery-1.11.3.min.js"></script>
-  <script src="/js/app.min.js?rev=284e13541229f221b47e8c0b19d51773"></script>
+  <script src="http://localhost:3000/app.js"></script>
   <script type="text/javascript">$(function(){$('#loader').remove();})</script>
-  
+  <script src="http://localhost:3000/webpack-dev-server.js"></script>
   <!-- <script src="/js/main.min.js?rev=74a2b33f68a000e4799f522640dc3654"></script> -->
   <script src="/lib/bootstrap.min.js"></script>
   <script src="/lib/bootstrap-datepicker.min.js"></script>
