--- a/views/print.hbs
+++ b/views/print.hbs
@@ -8,9 +8,7 @@
     <style type="text/css">
         body {
             font-size: .85em;
-            /*font-family: "Segoe UI", Verdana, Helvetica, Sans-Serif;*/
-            /*font-family: "宋体", "黑体";*/
-            font-family: "微软雅黑";
+            font-family: "微软雅黑", "Segoe UI", Verdana, Helvetica, Sans-Serif;
             color: #000;
             background-color: #fff;
         }
