--- a/public/src/sass/nav.sass
+++ b/public/src/sass/nav.sass
@@ -9,7 +9,7 @@
   .logo
     padding: 10px 0 6px
     a
-      @extend no-text-deco
+      @extend .no-text-deco
       display: block
       img
         display: inline-block
