1. set discount_price to 0 when the pay_modes is free; 2. fix an old spell mistake: propTypes;

--- a/public/src/sass/base.sass
+++ b/public/src/sass/base.sass
@@ -5,7 +5,7 @@
 body
   background: #fff
   // font-family: 'sans-serif'
-  font-family: "open sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: "微软雅黑", "open sans","Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 13px;
   color: #292A2B;
   overflow: hidden
