first  for usermanage&deptrole

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -30,8 +30,8 @@
   </div>
   <section id="app"></section>
   <script src="/lib/vendor/jquery-1.11.3.min.js"></script>
-  <script type="text/javascript" src="/build/commons.e15d1a73a5b635c04105.bundle.js"></script>
-  <script type="text/javascript" src="/build/index.e15d1a73a5b635c04105.bundle.js"></script>
+  <script type="text/javascript" src="http://localhost:3000/commons.bundle.js"></script>
+  <script type="text/javascript" src="http://localhost:3000/index.bundle.js"></script>
   <script>$(function(){$('#loader').remove();})</script>
   <script src="/lib/bootstrap.min.js"></script>
   <script src="/lib/bootstrap-datepicker.min.js"></script>
