--- a/views/print.hbs
+++ b/views/print.hbs
@@ -73,6 +73,12 @@
         }
         .clearfix{*+height:1%;}
         .clearfix:after{content:".";display:block;height:0;clear:both;visibility:hidden}
+        @media print{
+            .no-print { display: none; }
+            .page-next { page-break-after: always; }
+            .page-before { page-break-before: always; }
+            .page-block { page-break-inside: avoid; }
+        }
     </style>
     <script type="text/javascript">
         function init() {
@@ -89,9 +95,9 @@
 <body onload="init()">
 {{#if list}}
 {{#list}}
-<div class="Content">
-    <div class="tb">
-        <div class="clearfix">
+<div class="Content page-block">
+    <div class="tb page-block">
+        <div class="clearfix page-block">
             <div style="float: left; height: 40px; width: 170px;">
                 <div style="font-size: 23px; margin-left:15px; font-weight: bold; line-height: 23px; height: 23px; font-family: '幼圆'">幸福西饼</div>
                 <div style="font-size: 17px; margin-left:15px; font-weight: bold; line-height: 17px; height: 17px; font-family: '幼圆'; ">BLISS CAKE</div>
@@ -102,7 +108,7 @@
             </div>
         </div>
 
-        <div style="width: 100%" class="clearfix">
+        <div style="width: 100%" class="clearfix page-block">
             <table id="tablemoney" style="width: 730px; border-collapse: collapse; border: 1px solid #000000; height: 300px; float: left; " border="1">
                 <tbody>
                 <tr>
