--- a/public/src/sass/_bootstrap_reset.scss
+++ b/public/src/sass/_bootstrap_reset.scss
@@ -245,6 +245,12 @@ input {
   color: #fff;
 }
 
+.panel-theme > .panel-heading {
+  background-color: #F5E6CE;
+  border-color: #F5E6CE;
+  color: #4A4947;
+}
+
 .panel-success > .panel-heading {
   background-color: #5CB85C;
   border-color: #5CB85C;
