--- a/public/src/sass/base.sass
+++ b/public/src/sass/base.sass
@@ -3,13 +3,10 @@
 /********* 实体类 **********/
 /**************************/
 body
-  background: #fff
-  // font-family: 'sans-serif'
-  font-family: "微软雅黑", "open sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+  background: #fef8ee;
+  font-family: "Microsoft Yahei", "微软雅黑", "open sans","Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 13px;
   color: #292A2B;
-  overflow: hidden
-  // perspective: 1000
   &.login_hide
     overflow: auto
 html,body,body>section
@@ -18,12 +15,6 @@ html,body,body>section
 #app-container
   @extend .h100
   overflow: auto
-// #app-container
-//   transition: transform .8s
-//   opacity: 0
-// .login-hide
-//   #app-container
-//     opacity: 1
 
 .right-side
   margin-left: $left-side-w
