1. 优化更新了很多配送站管理的代码； 2. 去除modal显现动画；

--- a/public/src/sass/_bootstrap_reset.scss
+++ b/public/src/sass/_bootstrap_reset.scss
@@ -180,7 +180,9 @@ button, .btn:focus, .btn.focus, .btn:active:focus, .btn:active.focus, .btn.activ
 .modal-header .close:hover {
   opacity: 1;
 }
-
+.modal-backdrop {
+  opacity: 0.5
+}
 /*popover*/
 
 .popover {
