station_manage acl update

--- a/public/src/sass/order_manage.scss
+++ b/public/src/sass/order_manage.scss
@@ -27,8 +27,9 @@
   }
 
   .remark-in-table {
-    min-width: 120px;
-    @extend .text-overflow;
+    max-width: 126px;
+    min-width: 112px;
+    text-align: left;
   }
   .bordered {
     @include border-radius(3px);
