--- a/public/src/sass/content.scss
+++ b/public/src/sass/content.scss
@@ -1,10 +1,10 @@
 .sticky-header{
   .right-side {
     position: relative;
-    height: 100%;
+    min-height: 100%;
     .main-content {
       padding-top: 61px;
-      height: 100%;
+      // min-height: 100%;
     }
   }
 }
