--- a/public/src/sass/content.scss
+++ b/public/src/sass/content.scss
@@ -22,3 +22,39 @@
   .table-responsive.main-list{ max-height: 329px; } //主列表
   .table-responsive.modal-list{ max-height: 292px; } //弹窗列表
 }
+
+//配送站管理
+.station-manage{
+  .station-map{
+    position: relative;
+    .map-container{
+      height: 600px
+    }
+  }
+  .station-map.full-screen{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10000;
+    .map-container{
+      height: 100%
+    }
+    .full-screen-btn{
+      background: url(/images/min.png) center center no-repeat;
+      background-size: contain;
+    }
+  }
+
+  .full-screen-btn{
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    z-index: 10;
+    width: 20px;
+    height: 20px;
+    background: url(/images/max.png) center center no-repeat;
+    background-size: contain;
+  }
+}
