--- a/public/src/sass/base.sass
+++ b/public/src/sass/base.sass
@@ -324,6 +324,16 @@ hr.dotted
     margin-top: -10px
     color: $theme-font-color
 
+.partBtn
+  &:hover
+    color: $theme-font-color
+    border:1px solid #fcdfb3;
+    background-color:#fcf8e3;
+    padding:2px 3px;
+    border-radius:3px;
+
+
+
 
 
 
