--- a/public/src/sass/base.sass
+++ b/public/src/sass/base.sass
@@ -59,6 +59,10 @@ a
 .v-mg
   margin-top: 4px
   margin-bottom: 4px
+.v-middle
+  position: relative
+  top: 50%
+  transform: translateY(-50%)
 
 .space
   margin-left: 6px
