--- a/public/src/sass/nav.sass
+++ b/public/src/sass/nav.sass
@@ -6,6 +6,7 @@
   border-right: 2px solid $theme-color
   z-index: 100
   padding-bottom: 25px
+  background: #fff
   .logo
     padding: 10px 0 6px
     a
