部分页面css样式微调

--- a/public/src/sass/_bootstrap_reset.scss
+++ b/public/src/sass/_bootstrap_reset.scss
@@ -69,7 +69,13 @@
 .alert-success, .alert-danger, .alert-info, .alert-warning {
   border: none;
 }
+.alert-success{
+  background: #57A238
+}
 
+.alert-danger{
+  background: #CE4646
+}
 /*table*/
 .table, table{
   margin-bottom: 0;
