--- a/public/src/sass/base.sass
+++ b/public/src/sass/base.sass
@@ -91,6 +91,8 @@ a
   color: #9C9A9A !important
 .silver
   color: #ccc !important
+.white
+  color: #fff !important
 .font-sm
   font-size: 12px !important
 .font-lg
@@ -329,16 +331,12 @@ hr.dotted
     color: $theme-font-color
 
 .partBtn
+  padding: 2px 3px
+  border: 1px solid transparent
   &:hover
     color: $theme-font-color
-    border:1px solid #fcdfb3;
-    background-color:#fcf8e3;
-    padding:2px 3px;
-    border-radius:3px;
-    cursor: default;
-
-
-
-
-
-
+    border: 1px solid #fcdfb3
+    background-color: #fcf8e3
+    border-radius: 3px
+    cursor: pointer
+    user-select: none
