1. 修复非正常状态下退出编辑配送区域时，无法再次编辑的bug 2. 配送单打印页面更新

--- a/views/print.hbs
+++ b/views/print.hbs
@@ -250,17 +250,18 @@
                             <span style="margin:2px;">&nbsp;2.保存条件：0-4℃冷藏保存一天，4小时内5℃食用最佳；</span><br />
                             <span style="margin:2px;">&nbsp;3.就敢退：实物不对版，退款不退货！</span><br />
                             <span style="margin:2px;">&nbsp;4.就敢减：约定时间，迟到一分钟减一元！</span><br />
-                            <span style="margin:2px;">&nbsp;5.就敢送：迟到30分钟免费赠送！</span>
+                            <span style="margin:2px;">&nbsp;5.就敢送：迟到30分钟免费赠送！</span><br />
+                            <span style="margin:2px;">&nbsp;6.微信扫描右方二维码评价或反馈！</span>
                         </td>
                         <td style="border-left:none;">
-                            <img src="{{../baseHref}}/src/images/qrcode.png" style="width: 89px; height: 89px;vertical-align: middle;">
+                            <img src="{{../baseHref}}/src/images/qrcode.jpg" style="width: 89px; height: 89px;vertical-align: middle;">
                         </td>
                     </tr>
                     <tr>
                         <td colspan="9">
                             &nbsp;幸福热线：400-999-6666&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             官网订购：www.xfxb.net&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            微信订购：xfxbsz
+                            微信订购：扫描右上方二维码或添加xfxbsz
                         </td>
                     </tr>
                     </tbody>
