--- a/public/src/sass/base.sass
+++ b/public/src/sass/base.sass
@@ -329,13 +329,17 @@ hr.dotted
     color: $theme-font-color
 
 .partBtn
+  border: 1px solid transparent
+  padding: 2px 3px
+  user-select: none
+  cursor: pointer
   &:hover
     color: $theme-font-color
-    border:1px solid #fcdfb3;
-    background-color:#fcf8e3;
-    padding:2px 3px;
-    border-radius:3px;
-    cursor: default;
+    border: 1px solid #fcdfb3
+    background-color: #fcf8e3
+    border-radius: 3px
+
+    
 
 
 
