再次优化自动分配配送站准确率

--- a/public/src/sass/_bootstrap_reset.scss
+++ b/public/src/sass/_bootstrap_reset.scss
@@ -70,11 +70,13 @@
   border: none;
 }
 .alert-success{
-  background: #57A238
+  background: #57A238;
+  color: #fff;
 }
 
 .alert-danger{
-  background: #CE4646
+  background: #CE4646;
+  color: #fff;
 }
 /*table*/
 .table, table{
