--- a/public/src/sass/base.sass
+++ b/public/src/sass/base.sass
@@ -340,3 +340,6 @@ hr.dotted
     border: 1px solid #fcdfb3
     background-color: #fcf8e3
     border-radius: 3px
+
+.boldInput
+  background-color:#ccc
