--- a/public/src/sass/base.sass
+++ b/public/src/sass/base.sass
@@ -341,5 +341,6 @@ hr.dotted
     background-color: #fcf8e3
     border-radius: 3px
 
-.boldInput
-  background-color:#ccc
+#tab
+  .form-control[readonly]
+    background-color:#ccc
