--- a/public/src/sass/_bootstrap_reset.scss
+++ b/public/src/sass/_bootstrap_reset.scss
@@ -16,7 +16,7 @@
 
 .panel-heading {
   border-bottom: 1px dotted rgba(0, 0, 0, 0.2);
-  padding: 10px;
+  padding: 8px 10px;
   text-transform: uppercase;
   color: #535351;
   font-size: 14px;
@@ -24,10 +24,10 @@
 }
 
 .panel-body {
-  padding: 10px;
+  padding: 8px 10px;
 }
 .panel.search .panel-body{
-  padding: 6px 10px;
+  padding: 4px 10px;
 }
 /*dropdown shadow*/
 
@@ -85,8 +85,39 @@
 .table-responsive{
   margin-bottom: 12px;
 }
-.table thead > tr > th, .table tbody > tr > th, .table tfoot > tr > th, .table thead > tr > td, .table tbody > tr > td, .table tfoot > tr > td {
-  padding: 10px;
+
+.table > thead > tr > th,
+.table > thead > tr > td,
+.table > tbody > tr > th,
+.table > tbody > tr > td,
+.table > tfoot > tr > th,
+.table > tfoot > tr > td {
+  text-align: center;
+  vertical-align: middle;
+  font-size: 12px;
+  padding: 8px;
+}
+.table > thead > tr > th{
+  padding-top: 0px;
+}
+.table > thead > tr > th,
+.table > thead > tr > td {
+  white-space: nowrap;
+  font-size: 13px;
+}
+.table > tbody + tbody{
+  border-top: none;
+}
+.table-hover > tbody > tr:hover {
+  background-color: #F7E4D1 //黄
+  // background-color: #E5F0D8 //绿
+}
+.table > tbody > tr.active > td, .table > tbody > tr.active:hover > td {
+  background-color: #FBDCBD //黄
+  // background-color: #DBEAC8 //绿
+}
+table.no-padding tbody>tr>td{
+  padding: 0;
 }
 
 /*pagination*/
@@ -273,37 +304,6 @@ input {
   background-color: #D9534F;
   border-color: #D9534F;
   color: #fff;
-}
-
-.table > thead > tr > th,
-.table > thead > tr > td,
-.table > tbody > tr > th,
-.table > tbody > tr > td,
-.table > tfoot > tr > th,
-.table > tfoot > tr > td {
-  text-align: center;
-  vertical-align: middle;
-  font-size: 12px;
-  padding: 8px;
-}
-.table > thead > tr > th,
-.table > thead > tr > td {
-  white-space: nowrap;
-  font-size: 13px;
-}
-.table > tbody + tbody{
-  border-top: none;
-}
-.table-hover > tbody > tr:hover {
-  background-color: #F7E4D1 //黄
-  // background-color: #E5F0D8 //绿
-}
-.table > tbody > tr.active > td, .table > tbody > tr.active:hover > td {
-  background-color: #FBDCBD //黄
-  // background-color: #DBEAC8 //绿
-}
-table.no-padding tbody>tr>td{
-  padding: 0;
 }
 
 .input-xs, .input-group-xs > .form-control, .input-group-xs > .input-group-addon, .input-group-xs > .input-group-btn > .btn{
