--- a/views/print.hbs
+++ b/views/print.hbs
@@ -8,7 +8,7 @@
     <style type="text/css">
         body {
             font-size: .85em;
-            font-family: "微软雅黑", "Segoe UI", Verdana, Helvetica, Sans-Serif;
+            font-family: "微软雅黑", "宋体", "Segoe UI", Verdana, Helvetica, Sans-Serif;
             color: #000;
             background-color: #fff;
         }
