--- a/views/print.hbs
+++ b/views/print.hbs
@@ -225,7 +225,7 @@
                         <td colspan="7">
 
                                                 <span style="float: left;">
-                                                    {{#if atlas}}√蛋糕册{{else}} {{/if}}
+                                                    {{atlas}}
                                                 </span>
                         </td>
 
@@ -239,7 +239,7 @@
                         <td style="text-align: center;">1</td>
                         <td style="text-align: center;">商品名称</td>
                         <td style="text-align: left;" colspan="7">
-
+                            {{custom_name}}
                         </td>
                     </tr>
 
@@ -253,7 +253,7 @@
                     </tr>
                     <tr>
                         <td style="text-align: center;">接单人</td>
-                        <td style="text-align: center;">{{created_by}}</td>
+                        <td style="text-align: center;">{{last_op_cs_name}}</td>
                         <td style="text-align: center;" colspan="2">蛋糕师傅</td>
                         <td style="text-align: center;" colspan="2"></td>
                         <td style="text-align: center;">配送员</td>
