暂存修改模块一二级

--- a/public/src/sass/base.sass
+++ b/public/src/sass/base.sass
@@ -339,6 +339,13 @@ hr.dotted
     background-color: #fcf8e3
     border-radius: 3px
 
+.partBtn
+  &.active
+    color: $theme-font-color
+    border: 1px solid #fcdfb3
+    background-color: #fcf8e3
+    border-radius: 3px
+
 #tab
   .form-control[readonly]
     background-color:#ccc
