增加返回字段供打印页面决定显示简体还是繁体还是英文

--- a/views/print.hbs
+++ b/views/print.hbs
@@ -123,7 +123,7 @@
     </script>
 </head>
 
-<body onload="init()">
+<body data-ip="{{region}}" onload="init()">
 <!-- <button class="change-lan no-print">字体切换</button> -->
 {{#if list}}
 {{#list}}
