取消打印订单的HK显示问题

--- a/views/print.hbs
+++ b/views/print.hbs
@@ -102,8 +102,8 @@
     <script src="/lib/vendor/template-native.js"></script>
     <script src="/plugins/barcode/jsbarcode.all.min.js"></script>
 </head>
-<!-- <body data-ip="{{region}}" onload="init()"> -->
-<body data-ip="HK" onload="init()">
+ <body data-ip="{{region}}" onload="init()">
+<!--<body data-ip="HK" onload="init()">-->
 <div class="tools">
 <!-- <button class="change-font no-print">字体切换</button> -->
 <button class="change-lan no-print">中英文切换</button>
