--- a/views/print.hbs
+++ b/views/print.hbs
@@ -102,6 +102,29 @@
     <script src="/lib/vendor/jquery-1.11.3.min.js"></script>
     <script src="/lib/vendor/template-native.js"></script>
     <script src="/plugins/barcode/jsbarcode.all.min.js"></script>
+    <script type="text/javascript">
+        Date.prototype.format = function(format) {
+          var o = {
+            "M+": this.getMonth() + 1,
+            "d+": this.getDate(),
+            "h+": this.getHours(),
+            "m+": this.getMinutes(),
+            "s+": this.getSeconds(),
+            "q+": Math.floor((this.getMonth() + 3) / 3),
+            "S": this.getMilliseconds()
+          }
+          if (/(y+)/.test(format)) {
+            format = format.replace(RegExp.$1, (this.getFullYear() + "").substr(4 - RegExp.$1.length));
+          }
+
+          for (var k in o) {
+            if (new RegExp("(" + k + ")").test(format)) {
+              format = format.replace(RegExp.$1, RegExp.$1.length == 1 ? o[k] : ("00" + o[k]).substr(("" + o[k]).length));
+            }
+          }
+          return format;
+        }
+    </script>
 </head>
 <body data-ip="{{region}}" onload="init()">
 <!-- <body data-ip="HK" onload="init()"> -->
@@ -228,7 +251,7 @@
                         <td><%= lan.last_op_cs_name %></td>
                         <td>{{last_op_cs_name}}</td>
                         <td colspan="2"><%= lan.cake_baker %></td>
-                        <td colspan="2"></td>
+                        <td colspan="2"><%= lan.print_time %></td>
                         <td><%= lan.deliveryman %></td>
                         <td colspan="2">{{deliveryman_name}}</td>
                     </tr>
@@ -319,7 +342,9 @@
             remarks: '备注',
             verification_code: '验证码',
             last_op_cs_name: '接单人',
-            cake_baker: '蛋糕师傅',
+            // cake_baker: '蛋糕师傅', //以前是蛋糕师傅
+            cake_baker: '打印时间',
+            print_time: new Date().format('yyyy-MM-dd hh:mm'),
             deliveryman: '配送员',
             customer_signature: '顾客签字',
             signin_time: '签收时间',
