--- a/public/src/sass/_bootstrap_reset.scss
+++ b/public/src/sass/_bootstrap_reset.scss
@@ -37,13 +37,12 @@
 
 /*dropdown select bg*/
 
-// .dropdown-menu {
-//     box-shadow: none;
-// }
+.dropdown-menu {
+  min-width: 70px;
+}
 .dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
-  background-color: #424F63;
-  color: #FFFFFF;
-  text-decoration: none;
+  background-color: $theme-light-color;
+  color: $theme-font-color;
 }
 
 /*progress*/
@@ -52,8 +51,12 @@
   box-shadow: none;
   background: #f0f2f7;
   height: 15px;
+  // margin-bottom: 0;
   border-radius: 3px;
-  -webkit-border-radius: 3px;
+  .persent {
+    position: relative;
+    right: -8px;
+  }
 }
 
 .progress-bar {
@@ -63,7 +66,9 @@
   padding-right: 10px;
   font-size: 11px;
 }
-
+.progress-bar-theme {
+  background-color: lighten($btn-color, 7);
+}
 /*alert*/
 
 .alert-success, .alert-danger, .alert-info, .alert-warning {
@@ -118,6 +123,12 @@
 }
 table.no-padding tbody>tr>td{
   padding: 0;
+}
+.table>thead.font-normal>tr>th{
+  font-weight: normal;
+}
+.table.text-left thead>tr>th, .table.text-left tbody>tr>td{
+  text-align: left;
 }
 
 /*pagination*/
@@ -313,6 +324,7 @@ input {
 }
 .input-group-addon{
   font-size: 12px;
+  display: inline-block;
 }
 select.input-xs, .input-group-xs > select.form-control, .input-group-xs > select.input-group-addon, .input-group-xs > .input-group-btn > select.btn {
   height: 27px;
