fix: 打印页面文案

--- a/views/print.hbs
+++ b/views/print.hbs
@@ -352,7 +352,7 @@
 
             warm_tips: '&nbsp;温馨提示：',
             tips: [
-                '烘培产品对环境温度敏感度不同，容易影响各种口感，建议收货时间与食用时间间隔30分钟；',
+                '烘焙产品对环境温度敏感度不同，容易影响各种口感，建议收货时间与食用时间间隔30分钟；',
                 '保存条件：0-4℃冷藏保存一天，4小时内5℃食用最佳；',
                 '就敢退：实物不对版，退款不退货！',
                 '就敢减：约定时间，迟到一分钟减一元！',
@@ -400,7 +400,7 @@
 
             warm_tips: ' 溫馨提示：',
             tips: [
-                '烘培產品對環境溫度敏感度不同，容易影響各種口感，建議收貨時間與食用時間間隔30分鐘；',
+                '烘焙產品對環境溫度敏感度不同，容易影響各種口感，建議收貨時間與食用時間間隔30分鐘；',
                 '保存條件：0-4℃冷藏保存一天，4小時內5℃食用最佳；',
                 '就敢退：實物不對版，退款不退貨！',
                 '就敢減：約定時間，遲到一分鐘減一元！',
