商品详情页-支撑管理页面-50%

--- a/public/src/sass/base.sass
+++ b/public/src/sass/base.sass
@@ -82,10 +82,10 @@ a
   text-align: left !important
 .text-center
   text-align: center !important
-// .text-ellipsis
-//   white-space: nowrap
-//   overflow: hidden
-//   text-overflow: ellipsis
+.text-ellipsis
+  white-space: nowrap
+  overflow: hidden
+  text-overflow: ellipsis
 .nowrap
   white-space: nowrap
 .gray
