--- a/public/src/sass/_bootstrap_reset.scss
+++ b/public/src/sass/_bootstrap_reset.scss
@@ -251,7 +251,7 @@ button, .btn:focus, .btn.focus, .btn:active:focus, .btn:active.focus, .btn.activ
   font-weight: bold;
 }
 .form-control {
-  box-shadow: none;
+  box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.06);
 }
 input {
   outline: 0
