1. fix：input-group-addon样式； 2. fix: webpack env; 3. ignore: public/lib;

--- a/public/src/sass/_bootstrap_reset.scss
+++ b/public/src/sass/_bootstrap_reset.scss
@@ -324,7 +324,7 @@ input {
 }
 .input-group-addon{
   font-size: 12px;
-  display: inline-block;
+  // display: inline-block;
 }
 select.input-xs, .input-group-xs > select.form-control, .input-group-xs > select.input-group-addon, .input-group-xs > .input-group-btn > select.btn {
   height: 27px;
