update print.hbs : 貨

--- a/views/print.hbs
+++ b/views/print.hbs
@@ -380,7 +380,7 @@
             recipient_mobile: '收貨人電話',
             recipient_address: '送貨地址',
             pay_name: '付款方式',
-            delivery_time: '送達時間',
+            delivery_time: '送貨時間',
 
             product_name: '商品名稱',
             product_size: '商品規格',
